lang-parser-common/src/main/java.generated/io/epigraph/lang/parser/EpigraphParser.java
// This is a generated file. Not intended for manual editing.
package io.epigraph.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.epigraph.lang.lexer.EpigraphElementTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class EpigraphParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == E_ANON_LIST) {
      r = anonList(b, 0);
    }
    else if (t == E_ANON_MAP) {
      r = anonMap(b, 0);
    }
    else if (t == E_CUSTOM_PARAM) {
      r = customParam(b, 0);
    }
    else if (t == E_DATA_ENUM) {
      r = dataEnum(b, 0);
    }
    else if (t == E_DATA_LIST) {
      r = dataList(b, 0);
    }
    else if (t == E_DATA_MAP) {
      r = dataMap(b, 0);
    }
    else if (t == E_DATA_MAP_ENTRY) {
      r = dataMapEntry(b, 0);
    }
    else if (t == E_DATA_PRIMITIVE) {
      r = dataPrimitive(b, 0);
    }
    else if (t == E_DATA_RECORD) {
      r = dataRecord(b, 0);
    }
    else if (t == E_DATA_RECORD_ENTRY) {
      r = dataRecordEntry(b, 0);
    }
    else if (t == E_DATA_VALUE) {
      r = dataValue(b, 0);
    }
    else if (t == E_DATA_VAR) {
      r = dataVar(b, 0);
    }
    else if (t == E_DATA_VAR_ENTRY) {
      r = dataVarEntry(b, 0);
    }
    else if (t == E_DEFAULT_OVERRIDE) {
      r = defaultOverride(b, 0);
    }
    else if (t == E_DEFS) {
      r = defs(b, 0);
    }
    else if (t == E_ENUM_MEMBER_DECL) {
      r = enumMemberDecl(b, 0);
    }
    else if (t == E_ENUM_TYPE_BODY) {
      r = enumTypeBody(b, 0);
    }
    else if (t == E_ENUM_TYPE_DEF) {
      r = enumTypeDef(b, 0);
    }
    else if (t == E_EXTENDS_DECL) {
      r = extendsDecl(b, 0);
    }
    else if (t == E_FIELD_DECL) {
      r = fieldDecl(b, 0);
    }
    else if (t == E_FQN) {
      r = fqn(b, 0);
    }
    else if (t == E_FQN_SEGMENT) {
      r = fqnSegment(b, 0);
    }
    else if (t == E_FQN_TYPE_REF) {
      r = fqnTypeRef(b, 0);
    }
    else if (t == E_IMPORT_STATEMENT) {
      r = importStatement(b, 0);
    }
    else if (t == E_IMPORTS) {
      r = imports(b, 0);
    }
    else if (t == E_LIST_TYPE_BODY) {
      r = listTypeBody(b, 0);
    }
    else if (t == E_LIST_TYPE_DEF) {
      r = listTypeDef(b, 0);
    }
    else if (t == E_MAP_TYPE_BODY) {
      r = mapTypeBody(b, 0);
    }
    else if (t == E_MAP_TYPE_DEF) {
      r = mapTypeDef(b, 0);
    }
    else if (t == E_META_DECL) {
      r = metaDecl(b, 0);
    }
    else if (t == E_NAMESPACE_DECL) {
      r = namespaceDecl(b, 0);
    }
    else if (t == E_OP_INPUT_MODEL_PROJECTION) {
      r = opInputModelProjection(b, 0);
    }
    else if (t == E_OP_OUTPUT_ENUM_MODEL_PROJECTION) {
      r = opOutputEnumModelProjection(b, 0);
    }
    else if (t == E_OP_OUTPUT_FIELD_PROJECTION) {
      r = opOutputFieldProjection(b, 0);
    }
    else if (t == E_OP_OUTPUT_FIELD_PROJECTION_BODY) {
      r = opOutputFieldProjectionBody(b, 0);
    }
    else if (t == E_OP_OUTPUT_FIELD_PROJECTION_BODY_PART) {
      r = opOutputFieldProjectionBodyPart(b, 0);
    }
    else if (t == E_OP_OUTPUT_KEY_PROJECTION) {
      r = opOutputKeyProjection(b, 0);
    }
    else if (t == E_OP_OUTPUT_KEY_PROJECTION_PART) {
      r = opOutputKeyProjectionPart(b, 0);
    }
    else if (t == E_OP_OUTPUT_LIST_MODEL_PROJECTION) {
      r = opOutputListModelProjection(b, 0);
    }
    else if (t == E_OP_OUTPUT_LIST_POLY_BRANCH) {
      r = opOutputListPolyBranch(b, 0);
    }
    else if (t == E_OP_OUTPUT_MAP_MODEL_PROJECTION) {
      r = opOutputMapModelProjection(b, 0);
    }
    else if (t == E_OP_OUTPUT_MAP_POLY_BRANCH) {
      r = opOutputMapPolyBranch(b, 0);
    }
    else if (t == E_OP_OUTPUT_MODEL_PROJECTION) {
      r = opOutputModelProjection(b, 0);
    }
    else if (t == E_OP_OUTPUT_MODEL_PROJECTION_BODY) {
      r = opOutputModelProjectionBody(b, 0);
    }
    else if (t == E_OP_OUTPUT_MODEL_PROJECTION_BODY_PART) {
      r = opOutputModelProjectionBodyPart(b, 0);
    }
    else if (t == E_OP_OUTPUT_PRIMITIVE_MODEL_PROJECTION) {
      r = opOutputPrimitiveModelProjection(b, 0);
    }
    else if (t == E_OP_OUTPUT_RECORD_MODEL_PROJECTION) {
      r = opOutputRecordModelProjection(b, 0);
    }
    else if (t == E_OP_OUTPUT_RECORD_POLY_BRANCH) {
      r = opOutputRecordPolyBranch(b, 0);
    }
    else if (t == E_OP_OUTPUT_TAG_PROJECTION) {
      r = opOutputTagProjection(b, 0);
    }
    else if (t == E_OP_OUTPUT_VAR_PROJECTION) {
      r = opOutputVarProjection(b, 0);
    }
    else if (t == E_OP_PARAM_PROJECTION) {
      r = opParamProjection(b, 0);
    }
    else if (t == E_OP_PARAMETERS) {
      r = opParameters(b, 0);
    }
    else if (t == E_PRIMITIVE_TYPE_BODY) {
      r = primitiveTypeBody(b, 0);
    }
    else if (t == E_PRIMITIVE_TYPE_DEF) {
      r = primitiveTypeDef(b, 0);
    }
    else if (t == E_QID) {
      r = qid(b, 0);
    }
    else if (t == E_RECORD_TYPE_BODY) {
      r = recordTypeBody(b, 0);
    }
    else if (t == E_RECORD_TYPE_DEF) {
      r = recordTypeDef(b, 0);
    }
    else if (t == E_SUPPLEMENT_DEF) {
      r = supplementDef(b, 0);
    }
    else if (t == E_SUPPLEMENTS_DECL) {
      r = supplementsDecl(b, 0);
    }
    else if (t == E_TYPE_DEF_WRAPPER) {
      r = typeDefWrapper(b, 0);
    }
    else if (t == E_TYPE_REF) {
      r = typeRef(b, 0);
    }
    else if (t == E_VALUE_TYPE_REF) {
      r = valueTypeRef(b, 0);
    }
    else if (t == E_VAR_TAG_DECL) {
      r = varTagDecl(b, 0);
    }
    else if (t == E_VAR_TAG_REF) {
      r = varTagRef(b, 0);
    }
    else if (t == E_VAR_TYPE_BODY) {
      r = varTypeBody(b, 0);
    }
    else if (t == E_VAR_TYPE_DEF) {
      r = varTypeDef(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(E_ANON_LIST, E_ANON_MAP, E_FQN_TYPE_REF, E_TYPE_REF),
    create_token_set_(E_DATA_ENUM, E_DATA_LIST, E_DATA_MAP, E_DATA_RECORD,
      E_DATA_VALUE, E_DATA_VAR),
  };

  /* ********************************************************** */
  // 'list' '[' valueTypeRef ']'
  public static boolean anonList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anonList")) return false;
    if (!nextTokenIs(b, E_LIST)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, E_ANON_LIST, null);
    r = consumeToken(b, E_LIST);
    p = r; // pin = 1
    r = r && report_error_(b, consumeToken(b, E_BRACKET_LEFT));
    r = p && report_error_(b, valueTypeRef(b, l + 1)) && r;
    r = p && consumeToken(b, E_BRACKET_RIGHT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'map' '[' typeRef ',' valueTypeRef ']'
  public static boolean anonMap(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anonMap")) return false;
    if (!nextTokenIs(b, E_MAP)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, E_ANON_MAP, null);
    r = consumeToken(b, E_MAP);
    p = r; // pin = 1
    r = r && report_error_(b, consumeToken(b, E_BRACKET_LEFT));
    r = p && report_error_(b, typeRef(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, E_COMMA)) && r;
    r = p && report_error_(b, valueTypeRef(b, l + 1)) && r;
    r = p && consumeToken(b, E_BRACKET_RIGHT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // qid '=' dataValue
  public static boolean customParam(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "customParam")) return false;
    if (!nextTokenIs(b, E_ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, E_CUSTOM_PARAM, "<custom attribute>");
    r = qid(b, l + 1);
    r = r && consumeToken(b, E_EQ);
    p = r; // pin = 2
    r = r && dataValue(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // qid
  public static boolean dataEnum(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataEnum")) return false;
    if (!nextTokenIs(b, E_ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = qid(b, l + 1);
    exit_section_(b, m, E_DATA_ENUM, r);
    return r;
  }

  /* ********************************************************** */
  // '[' (dataValue ','?)* ']'
  public static boolean dataList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataList")) return false;
    if (!nextTokenIs(b, E_BRACKET_LEFT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, E_DATA_LIST, null);
    r = consumeToken(b, E_BRACKET_LEFT);
    p = r; // pin = 1
    r = r && report_error_(b, dataList_1(b, l + 1));
    r = p && consumeToken(b, E_BRACKET_RIGHT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (dataValue ','?)*
  private static boolean dataList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataList_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!dataList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dataList_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // dataValue ','?
  private static boolean dataList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = dataValue(b, l + 1);
    r = r && dataList_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ','?
  private static boolean dataList_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataList_1_0_1")) return false;
    consumeToken(b, E_COMMA);
    return true;
  }

  /* ********************************************************** */
  // '(' dataMapEntry* ')'
  public static boolean dataMap(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataMap")) return false;
    if (!nextTokenIs(b, E_PAREN_LEFT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, E_DATA_MAP, null);
    r = consumeToken(b, E_PAREN_LEFT);
    p = r; // pin = 1
    r = r && report_error_(b, dataMap_1(b, l + 1));
    r = p && consumeToken(b, E_PAREN_RIGHT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // dataMapEntry*
  private static boolean dataMap_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataMap_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!dataMapEntry(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dataMap_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // dataVarValue ':' dataValue ','?
  public static boolean dataMapEntry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataMapEntry")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, E_DATA_MAP_ENTRY, "<data map entry>");
    r = dataVarValue(b, l + 1);
    r = r && consumeToken(b, E_COLON);
    p = r; // pin = 2
    r = r && report_error_(b, dataValue(b, l + 1));
    r = p && dataMapEntry_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, dataValueRecover_parser_);
    return r || p;
  }

  // ','?
  private static boolean dataMapEntry_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataMapEntry_3")) return false;
    consumeToken(b, E_COMMA);
    return true;
  }

  /* ********************************************************** */
  // string | number | boolean
  public static boolean dataPrimitive(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataPrimitive")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, E_DATA_PRIMITIVE, "<data primitive>");
    r = consumeToken(b, E_STRING);
    if (!r) r = consumeToken(b, E_NUMBER);
    if (!r) r = consumeToken(b, E_BOOLEAN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '{' dataRecordEntry* '}'
  public static boolean dataRecord(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataRecord")) return false;
    if (!nextTokenIs(b, E_CURLY_LEFT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, E_DATA_RECORD, null);
    r = consumeToken(b, E_CURLY_LEFT);
    p = r; // pin = 1
    r = r && report_error_(b, dataRecord_1(b, l + 1));
    r = p && consumeToken(b, E_CURLY_RIGHT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // dataRecordEntry*
  private static boolean dataRecord_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataRecord_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!dataRecordEntry(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dataRecord_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // qid ':' dataValue ','?
  public static boolean dataRecordEntry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataRecordEntry")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, E_DATA_RECORD_ENTRY, "<data record entry>");
    r = qid(b, l + 1);
    r = r && consumeToken(b, E_COLON);
    p = r; // pin = 2
    r = r && report_error_(b, dataValue(b, l + 1));
    r = p && dataRecordEntry_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, dataValueRecover_parser_);
    return r || p;
  }

  // ','?
  private static boolean dataRecordEntry_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataRecordEntry_3")) return false;
    consumeToken(b, E_COMMA);
    return true;
  }

  /* ********************************************************** */
  // ( fqnTypeRef '/' )*
  static boolean dataTypeSpec(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataTypeSpec")) return false;
    int c = current_position_(b);
    while (true) {
      if (!dataTypeSpec_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dataTypeSpec", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // fqnTypeRef '/'
  private static boolean dataTypeSpec_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataTypeSpec_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = fqnTypeRef(b, l + 1);
    r = r && consumeToken(b, E_SLASH);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // dataTypeSpec? (dataVar | varValue)
  public static boolean dataValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, E_DATA_VALUE, "<data value>");
    r = dataValue_0(b, l + 1);
    r = r && dataValue_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
